# managed-linux-democracy

./: Cargo.toml  README.md  build.rs
ballet_box/: Cargo.toml
ballet_box/public/: index.html
ballet_box/src/: main.rs
ballot_box/: Cargo.toml  Makefile
ballot_box/public/: democracy.js  index.html
ballot_box/public/css/: custom.css  main.css
ballot_box/src/: main.rs
democracy-scheduler/: Cargo.toml  build.rs  main.bpf.c
democracy-scheduler/src/: bpf.rs  main.rs
democracy-scheduler/src/bpf/: main.bpf.c
src/: main.rs
thingdoer/: Cargo.toml
thingdoer/src/: main.rs
