[package]
name = "ballet_box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "*" }
tokio = { version = "*", features = ["full"] }
anyhow = "*"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.105"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
